v2/infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 4chan-v2
  labels:
    name: 4chan-v2
    app: 4chan-modernization
